--- a/BluetoothImplementations/BlueZ/CMakeLists.txt
+++ b/BluetoothImplementations/BlueZ/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.1)
 project(BluetoothImplementationsBlueZ LANGUAGES CXX)
 
 add_subdirectory("src")
+add_subdirectory("test")
